# client-sdk-mobile

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: android-publishing.yml  android.yml  ios.yml  publishing-android.yml  publishing-ios.yml  rust.yml
examples/: .gitignore  settings.gradle
examples/app/: build.gradle
examples/app/src/main/: AndroidManifest.xml
examples/demo-android/: settings.gradle
examples/demo-android/app/: build.gradle
examples/demo-android/gradle/wrapper/: gradle-wrapper.properties
examples/demo-cmd/: Cargo.toml
examples/demo-cmd/src/: main.rs
examples/demo-cocoapods/: Podfile
examples/demo-cocoapods/Demo/: AppDelegate.swift
examples/demo-objc/: Podfile
examples/demo-objc/Demo/: AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
examples/demo-objc/Demo.xcodeproj/: project.pbxproj
examples/demo-swiftpm/Demo/: AppDelegate.swift
examples/demo-swiftpm/Demo.xcodeproj/: project.pbxproj
examples/demo-swiftpm/Demo/Base.lproj/: Main.storyboard
examples/gradle/wrapper/: gradle-wrapper.properties
rust-core/: Cargo.toml  build.rs
rust-core/benches/: bench.rs
rust-core/resources/fixtures/: repo.json  toggles.json
rust-core/src/: feature_probe.rs  lib.rs  sync.rs  user.rs
rust-core/tests/: integration_test.rs
rust-uniffi/: Cargo.toml  build.rs  uniffi.toml
rust-uniffi/src/: featureprobe.udl  lib.rs
rust-uniffi/tests/: test_generated_bindings.rs
rust-uniffi/tests/bindings/: test.kts  test.swift
sdk-android/: README.md  gradle.properties  publish_aar.gradle  settings.gradle
sdk-android/app/: build.gradle
sdk-android/app/src/main/: AndroidManifest.xml
sdk-android/demo/: build.gradle
sdk-android/gradle/wrapper/: gradle-wrapper.properties
sdk-android/sdk/: build.gradle  consumer-rules.pro  secring.gpg
sdk-android/sdk/src/main/: AndroidManifest.xml
sdk-ios/: .gitignore  FeatureProbe.podspec  Info.plist  ObjcFeatureProbe.swift  Package.swift  README.md  build-xcframework.sh  module.modulemap
sdk-ios/client-sdk-ios/: FeatureProbe.podspec  Package.swift  README.md
sdk-ios/demo-cocoapods/: Podfile
sdk-ios/demo-cocoapods/Demo/: AppDelegate.swift
sdk-ios/demo-cocoapods/Demo.xcodeproj/: project.pbxproj
sdk-ios/demo-objc/: Podfile
sdk-ios/demo-objc/Demo/: AppDelegate.h  AppDelegate.m
sdk-ios/demo-swiftpm/Demo/: AppDelegate.swift
sdk-ios/demo-swiftpm/Demo.xcodeproj/: project.pbxproj
(+31 files in other folders)
