[package]
name = "fp-mobile-uniffi"
version = "1.0.1"
edition = "2021"

[lib]
name = "featureprobe_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
feature_probe_mobile_sdk_core = { path = "../rust-core" }
parking_lot = { version = "0.12", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"

uniffi_macros = "0.19.1"
uniffi = { version = "0.19.1", features = [ "builtin-bindgen" ] }

[build-dependencies]
uniffi_build = { version = "0.19.1", features = [ "builtin-bindgen" ] }